--- a/src/components/Deleteme.html
+++ b/src/components/Deleteme.html
@@ -1,340 +1,8 @@
-<body>
-	<section class="hero is-primary header-image">
-		<div class="hero-head">
-
-<nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
-
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/">
-			<img src="/img/logo.svg" width="64" alt="Roadmap - Product management software">
-		</a>
-
-		<button class="button navbar-burger" id="burger">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-	</div>
-	<div class="navbar-menu" id="main-menu">
-		<div class="navbar-start">
-			<a href="/tour/" class="navbar-item ">
-				tour
-			</a>
-			<a href="/plans-pricing" class="navbar-item ">
-				pricing
-			</a>
-			<a href="/cases/" class="navbar-item ">
-				customers
-			</a>
-			<a href="/public-roadmap/" class="navbar-item ">
-				our roadmap
-			</a>
-			<a href="/roadmap-integrations/" class="navbar-item ">
-				integrations
-			</a>
-			<a href="/help/" class="navbar-item ">
-				help
-			</a>
-		</div>
-		<div class="navbar-end">
-			<span class="navbar-item">
-				<a href="https://app.roadmap.space" class="button is-outlined is-primary">
-					sign in
-				</a>
-			</span>
-			<span class="navbar-item">
-				<a href="https://app.roadmap.space/#/signup" class="button is-primary">
-					sign up
-				</a>
-			</span>
-		</div>
-	</div>
-</nav>
-
-
-		</div>
-		<div class="hero-body">
-			<div class="container has-text-centered">
-				<h1 class="title is-2">
-					Build a feedback-driven product with Roadmap
-				</h1>
-				<h2 class="subtitle is-4">
-					Tell the story of your users feedback
-				</h2>
-				<p>
-					<video src="/img/hero.mp4" autoplay="" loop="" style="width: 85%;max-width: 1200px">
-				</video></p>
-				<p>
-					<br>
-					<a href="https://app.roadmap.space/#/signup" class="button is-primary is-large">
-						Create your roadmap for free
-					</a>
-				</p>
-			</div>
-		</div>
-	</section>
-	<section class="hero-cta has-text-centered">
-		<p class="subtitle has-text-center">
-			Works with the tools you know and love. <a href="/roadmap-integrations/">View all</a>.
-		</p>
-		<p class="has-text-center">
-			<a href="/roadmap-integrations/">
-				<img src="/img/integrations.png" style="width: 75%;max-width: 500px;">
-			</a>
-		</p>
-	</section>
-
-	<section id="what">
-		<div class="container">
-			<div class="columns">
-				<div class="column is-two-third">
-					<img src="/img/tour_feedback.png" alt="Feedback inbox">
-				</div>
-				<div class="column is-one-third">
-					<h2 class="title is-2">All product feedback in one place</h2>
-					<p>
-						The feedback inbox is a central place for feedback directly from the widget. You can even push product ideas from the backlog
-						to the widget as a quick survey.
-					</p>
-					<p>
-						Users who participate are added to that idea as a follower in the backlog. You can also capture feedback via Slack, Intercom,
-						Email, and more.
-					</p>
-					<p>
-						<a href="/tour/" class="button is-outlined is-primary is-large">Take the tour</a>
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="columns">
-				<div class="column is-one-third">
-					<h2 class="title is-2">A dynamic backlog to help with prioritizing</h2>
-					<p>
-						The idea backlog is a single source of truth for product and feature ideas from the team or escalated feedback.
-					</p>
-					<p>
-						Custom fields and dynamic sorting help your team to prioritize ideas that align with product strategy.
-					</p>
-					<p>
-						<a href="/tour/" class="button is-outlined is-primary is-large">Take the tour</a>
-					</p>
-				</div>
-				<div class="column is-two-third">
-					<img src="/img/tour_ideas.png" alt="Idea backlog">
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div id="pubrdmp">
-				<h3 class="title is-3">A customizable, interactive product roadmap</h3>
-				<p>
-					Prioritized ideas are combined into stories. Stories can be shared on your product roadmap to keep users and stakeholders
-					up-to-date with what’s happening now, soon, and in the future vision for your product.
-				</p>
-				<p>
-					Stories support HTML and markdown, and roadmaps can be completely customized to your brand with advanced CSS.
-				</p>
-				<p>
-					<a href="/tour/" class="button is-outlined is-primary is-large">Take the tour</a>
-				</p>
-			</div>
-			<p class="has-text-centered">
-				<img id="pubrdmp-img" src="/img/tour_publicroadmap.png" alt="Public roadmap">
-			</p>
-		</div>
-	</section>
-
-
-	<section class="purple-container">
-	<div class="columns">
-		<div class="column is-one-third"></div>
-		<div class="column is-one-third has-text-centered footer-cta">
-			<h5 class="title is-2">Create your product roadmap</h5>
-				<p class="subtitle is-5 is-dark">
-					Capture feedback, create a product backlog, message users, and share a public roadmap –
-					<strong>for free</strong>.
-				</p>
-				<a href="https://app.roadmap.space/#/signup" class="button is-primary is-large">Start now</a>
-		</div>
-		<div class="column is-one-third"></div>
-	</div>
-</section>
-<footer class="roadmap">
-	<div class="container">
-		<div class="columns">
-			<div class="column">
-				<h6 class="subtitle has-text-light">EXPLORE</h6>
-				<ul class="">
-					<li>
-						<a href="/tour/">Product overview</a>
-					</li>
-					<li>
-						<a href="/plans-pricing/">Pricing</a>
-					</li>
-					<li><a href="/roadmap-integrations/">Integrations</a></li>
-					<li>
-						<a href="/cases/">Customers</a>
-					</li>
-					<li>
-						<a href="/blog/">Blog</a>
-					</li>
-					<li>
-						<a href="/public-roadmap/">Our roadmap</a>
-					</li>
-				</ul>
-			</div>
-			<div class="column">
-				<h6 class="subtitle has-text-light">RESOURCES</h6>
-				<ul class="">
-					<li>
-						<a href="/getting-started-guide/">Getting started</a>
-					</li>
-					<li>
-						<a href="/help/">Help and documentation</a>
-					</li>
-					<li>
-						<a href="http://api.roadmap.space" target="_blank">API</a>
-					</li>
-					<li>
-						<a href="https://status.roadmap.space" target="_blank">Status</a>
-					</li>
-				</ul>
-			</div>
-			<div class="column">
-				<h6 class="subtitle has-text-light">COMPARISON</h6>
-				<ul class="">
-					<li>
-						<a href="/vs/uservoice/">UserVoice</a>
-					</li>
-					<li>
-						<a href="/vs/aha/">Aha!</a>
-					</li>
-				</ul>
-			</div>
-			<div class="column">
-				<h6 class="subtitle has-text-light">REACH TO US</h6>
-				<ul id="footer-social-links">
-					<li>
-						<a href="/contactus/" class="social" title="Contact us">
-							<i class="fa fa-envelope"></i>
-						</a>
-					</li>
-					<li>
-						<a href="https://twitter.com/roadmapspace" class="social">
-							<i class="fa fa-twitter"></i>
-						</a>
-					</li>
-					<li>
-						<a href="https://facebook.com/roadmap.space" class="social">
-							<i class="fa fa-facebook"></i>
-						</a>
-					</li>
-				</ul>
-				<p>
-					<br>
-					Focus Centric inc.<br>
-					Saint-Colomban, Québec, Canada<br>
-					+1 450.504.4381
-				</p>
-			</div>
-		</div>
-		<div class="columns padded-top">
-			<div class="column">
-				<p>© Roadmap 2018 - A Focus Centric inc. product</p>
-			</div>
-			<div class="column">
-				<a href="/legal/tos/">Terms of service</a> |
-				<a href="/legal/privacy/">Privacy policy</a>
-			</div>
-		</div>
-	</div></footer>
-
-
-
-<script type="text/javascript" async="" src="https://widget.intercom.io/widget/tquruup0"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
-	window.intercomSettings = {
-		app_id: "tquruup0"
-	};
-</script>
-<script>(function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else { var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/tquruup0'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); } if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })()</script>
-
-
-<script>
-(function(i, s, o, g, r, a, m) {
-  i['GoogleAnalyticsObject'] = r;
-  (i[r] =
-    i[r] ||
-    function() {
-      (i[r].q = i[r].q || []).push(arguments);
-    }), (i[r].l = 1 * new Date());
-  (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-  a.async = 1;
-  a.src = g;
-  m.parentNode.insertBefore(a, m);
-})(
-  window,
-  document,
-  'script',
-  'https://www.google-analytics.com/analytics.js',
-  'ga'
-);
-
-ga('create', 'UA-82826054-1', 'auto');
-ga('send', 'pageview');
-</script>
-
-<script>
-function getCookie(name) {
-  var dc = document.cookie;
-  var prefix = name + '=';
-  var begin = dc.indexOf('; ' + prefix);
-  if (begin == -1) {
-    begin = dc.indexOf(prefix);
-    if (begin != 0) return null;
-  } else {
-    begin += 2;
-    var end = document.cookie.indexOf(';', begin);
-    if (end == -1) {
-      end = dc.length;
-    }
-  }
-  return decodeURI(dc.substring(begin + prefix.length, end));
-}
-
-var r = encodeURIComponent(document.referrer);
-var host = document.location.host;
-var idx = host.indexOf(':');
-if (idx > -1) {
-  host = host.substr(0, idx);
-}
-setTimeout(function() {
-  var exists = getCookie('rdmpcf');
-  if (!exists) {
-    document.cookie =
-      'rdmpcf=' + r + '; path=/; domain=' + host + '; max-age=31536000;';
-  }
-}, 500);
-</script>
-
-<script>
-document.addEventListener(
-  'DOMContentLoaded',
-  function() {
-    var burger = document.getElementById('burger');
-    burger.addEventListener(
-      'click',
-      function(e) {
-        var menu = document.getElementById('main-menu');
-        burger.classList.toggle('is-active');
-        menu.classList.toggle('is-active');
-      },
-      false
-    );
-  },
-  false
-);
-</script>
-
-
-<script id="wappalyzer" src="chrome-extension://gppongmhjkpfnbhagpmjfkannfbllamg/js/inject.js"></script><iframe id="intercom-frame" style="display: none;"></iframe><div id="intercom-container" style="position: fixed; width: 0px; height: 0px; bottom: 0px; right: 0px; z-index: 2147483647;"><div data-reactroot="" class="intercom-app intercom-app-launcher-enabled"><span></span><iframe allowfullscreen="" class="intercom-launcher-frame" name="intercom-launcher-frame"></iframe><iframe allowfullscreen="" class="intercom-launcher-discovery-frame" name="intercom-launcher-discovery-frame" style="width: 60px;"></iframe><span></span><!-- react-empty: 4 --><span></span><!-- react-empty: 6 --></div></div></body>
+<div class="side">
+	<div class="inner funding-info">
+		<h2 class="label">With your help</h2>
+		<p class="p10">We’ve funded
+			<span class="stat stat-short">24,537</span> water projects for
+			<span class="stat stat-long">7&nbsp;million</span> people around the&nbsp;world.
+		</p><a class="button outline-black" href="//www.charitywater.org/projects/">See more
+			<span class="custom-show-for-large-up">of our</span> impact</a></div></div>
