--- a/src/css/homeComponentStyle.scss
+++ b/src/css/homeComponentStyle.scss
@@ -13,134 +13,65 @@ body,
   font-weight: bold;
 }
 
-.hero {
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+.donate-button {
+  background: #f4585e;
+  border-bottom: 4px solid #a80b11;
+  color: #fff;
+}
+
+.volunteer-button {
+  background: #2c96a2;
+  border-bottom: 4px solid #1c5e66;
+  color: #fff;
+}
+
+ul.button-list li {
+  list-style: none;
+  display: inline-block;
+  zoom: 1;
+  margin: 0 15px 10px 15px;
+  padding: 0;
+}
+
+.donate-button,
+.volunteer-button {
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  font-family: "pt-serif", serif;
+  //font-style: italic;
+  overflow: hidden;
+  padding: 15px 40px;
+  text-decoration: none;
+  border-radius: 3px;
+  height: 50px;
+  width: 200px;
 }
 
 .header-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),
-    url(../dist/img/aurora.jpg);
-  background-image: url(../dist/img/aurora.jpg);
+  //background-image: url(../dist/img/logoTree04.png);
+  //height: 650px;
+  //width: 100%;
+  //background-color: white;
+  //background-repeat: no-repeat;
+
+  background-image: url(../dist/img/logoTree01.png);
+  height: 750px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.hero.is-primary {
-  background-color: #96f;
-  color: #fff;
-}
-
-.hero-body {
+.header-body {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
-  flex-grow: 1;
   -ms-flex-negative: 0;
+  flex-grow: 1;
   flex-shrink: 0;
   padding: 3rem 1.5rem;
-}
-
-.container {
-  margin: 0 auto;
-  position: relative;
-}
-
-.has-text-centered {
-  text-align: center !important;
-}
-
-.title {
-  //color: #363636;
-  //font-size: 2rem;
-  font-weight: 600;
-  line-height: 1.125;
-}
-
-.title.is-2 {
-  font-size: 2.5rem;
-}
-
-.subtitle {
-  // color: #4a4a4a;
-  //font-size: 1.25rem;
-  font-weight: 400;
-  line-height: 1.25;
-}
-
-.subtitle.is-4 {
-  font-size: 1.5rem;
-}
-
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//   font-size: 100%;
-//   font-weight: normal;
-// }
-
-.button {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border: 1px solid transparent;
-  border-radius: 3px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  font-size: 1rem;
-  height: 2.25em;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  line-height: 1.5;
-  padding-bottom: calc(0.375em - 1px);
-  padding-left: calc(0.625em - 1px);
-  padding-right: calc(0.625em - 1px);
-  padding-top: calc(0.375em - 1px);
-  position: relative;
-  vertical-align: top;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: white;
-  border-color: #dbdbdb;
-  color: #363636;
-  cursor: pointer;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.button.is-primary {
-  background-color: #96f;
-  border-color: transparent;
-  color: #fff;
-}
-
-.button.is-large {
-  font-size: 1.5rem;
 }
 
 //slide show
@@ -151,55 +82,6 @@ body,
   height: 100%;
   overflow: hidden;
   white-space: nowrap;
-
-  .slider-wrapper {
-    position: relative;
-    height: 100%;
-    width: 100%;
-
-    .slide {
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-    }
-  }
-
-  .settings-icon {
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 99999999999999;
-    background: white;
-    border-radius: 50%;
-    padding: 5px;
-
-    path,
-    polygon {
-      fill: black;
-    }
-  }
-
-  .settings {
-    background: rgba(0, 0, 0, 0.75);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 999999999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .menu {
-      width: 600px;
-      height: 350px;
-      background: white;
-
-      @media (max-width: 650px) {
-        width: 300px;
-      }
-    }
-  }
 }
 
 .right-arrow,
@@ -218,11 +100,6 @@ body,
     transition: transform ease-in .1s;
     transform: scale(1.1);
   }
-}
-
-.cool-buttons {
-  background: black;
-  border: 2px solid white;
 }
 
 .right-arrow {
@@ -257,23 +134,250 @@ body,
   }
 }
 
-.dots-container {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  z-index: 9999;
-  padding: 5px 0;
+////logos-slider
+.logos-slider {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0em 0em;
+  //border-style: dashed;
+}
 
-  .dot {
-    background: #222;
-    display: inline-block;
-    padding: 10px;
-    margin-right: 5px;
-    cursor: pointer;
-    border-radius: 50%;
+////////////////////////////////////////////////
+
+.basicBox {
+  width: 100px;
+  height: 40px;
+  margin: 15px;
+  color: #4274d3;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.15rem;
+  line-height: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+}
+
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+svg rect {
+  fill: none;
+  stroke: #4274d3;
+  stroke-width: 1;
+}
+
+.basicBox:hover svg rect {
+  stroke: #4274d3;
+}
+
+/* Basic Box */
+svg rect {
+  stroke-dasharray: 400, 0;
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  -ms-transition: all 0.8s ease-in-out;
+  -o-transition: all 0.8s ease-in-out;
+}
+.basicBox:hover svg rect {
+  stroke-width: 3;
+  stroke-dasharray: 35, 245;
+  stroke-dashoffset: 38;
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  -ms-transition: all 0.8s ease-in-out;
+  -o-transition: all 0.8s ease-in-out;
+}
+
+////////header///////
+.svg-wrapper {
+  margin-top: 0;
+  position: relative;
+  width: 150px;
+  /*make sure to use same height/width as in the html*/
+  height: 40px;
+  display: inline-block;
+  border-radius: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.words {
+  margin-top: 10px;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 1.1em;
+}
+
+/*
+  This is where we define the fill, color, thickness,
+  and stroke pattern of the SVG when there is no hover.
+  The dasharray and offset together define the line position
+  under the words. Here's also where the transition speed is set.
+*/
+
+#shape {
+  stroke-width: 6px;
+  fill: transparent;
+  stroke: #009ffd;
+  stroke-dasharray: 85 400;
+  stroke-dashoffset: -220;
+  transition: 1s all ease;
+}
+
+/*
+    Changing the shape on hover. I change the color of the stroke,
+make it thinner, then set it to again wrap around the entire parent element.
+*/
+
+.svg-wrapper:hover #shape {
+  stroke-dasharray: 50 0;
+  stroke-width: 3px;
+  stroke-dashoffset: 0;
+  stroke: #06d6a0;
+}
+
+///////////kk
+$red: #f44336;
+@mixin transition($in) {
+  transition: $in;
+  -webkit-transition: $in;
+  -moz-transition: $in;
+  -o-transition: $in;
+  -ms-transition: $in;
+}
+@mixin transform($in) {
+  transform: $in;
+  -webkit-transform: $in;
+  -moz-transform: $in;
+  -o-transform: $in;
+  -ms-transform: $in;
+}
+@mixin animation($in) {
+  animation: $in;
+  -webkit-animation: $in;
+  -moz-animation: $in;
+  -o-animation: $in;
+  -ms-animation: $in;
+}
+
+.myButt {
+  padding: 15px;
+  display: block;
+  cursor: pointer;
+  font-size: 17px;
+  background-color: transparent;
+  position: relative;
+  border: 2px solid #fff;
+
+  @include transition(all 0.5s ease);
+}
+
+// ################ THREE
+
+.three {
+  color: white;
+  border-color: transparent;
+
+  &:before {
+    width: 0;
+    height: 1px;
+    content: " ";
+    background-color: $red;
+    position: absolute;
+    top: 0;
+    left: 50%;
+
+    @include transition(all 0.3s ease);
   }
-  .active {
-    background: #fff;
+
+  &:after {
+    @extend .three:before;
+    top: 100%;
+  }
+
+  &:hover {
+    letter-spacing: 4px;
+    color: $red;
+
+    &:before {
+      width: 100%;
+      left: 0;
+    }
+    &:after {
+      width: 100%;
+      left: 0;
+    }
   }
 }
+
+///video
+.funding-info-section {
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
+.side-by-side {
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+}
+
+.side-by-side .side {
+  vertical-align: middle;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.funding-info-section .funding-info {
+  padding: 30px;
+  background: #fff;
+}
+
+.funding-info-section .funding-info .label {
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.p10 {
+  font-size: 26px;
+}
+
+.stat-short {
+  background-image: url(../dist/img/brushout.png);
+}
+
+.stat {
+  display: inline-block;
+  background-size: contain;
+  background-position: 50%;
+  padding: 10px 15px;
+  margin: -10px;
+  background-repeat: no-repeat;
+}
+
+///
+
+.parallax {
+  background-image: url(../dist/img/img-5.png);
+  min-height: 200px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/////creating blog
