--- a/src/components/Deleteme.html
+++ b/src/components/Deleteme.html
@@ -1,8 +1,62 @@
-<div class="side">
-	<div class="inner funding-info">
-		<h2 class="label">With your help</h2>
-		<p class="p10">We’ve funded
-			<span class="stat stat-short">24,537</span> water projects for
-			<span class="stat stat-long">7&nbsp;million</span> people around the&nbsp;world.
-		</p><a class="button outline-black" href="//www.charitywater.org/projects/">See more
-			<span class="custom-show-for-large-up">of our</span> impact</a></div></div>
+<div class="ui container">
+        <h2 class="ui header centered">Negócios em Destaque</h2>
+        <h3 class="ui header centered">Veja alguns negócios que já estão vendendo por Assinatura no Clubom.</h3>
+        <div class="ui centered grid">
+            <div class="sixteen wide column center aligned">
+                <div class="ui centered three column stackable grid">
+                    <div class="column">
+                        <a class="ui card" href="/biancatoledo" target="_blank">
+                            <div class="image">
+                                <img src="/assets/v1/images/v-636578694067802501_banner-list-company-biancatoledo.png">
+                            </div>
+                            <div class="content">
+                                <div class="header">Bianca Toledo</div>
+                                <div class="meta">
+                                    <span class="category">Ensino e Assistência Religiosa através de cursos à distancia, estudos e devocionais.</span>
+                                </div>
+                                <div class="description">
+                                    <p>a partir de</p>
+                                    <p><span class="price">R$ 29,90</span> / por mês</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="column">
+                        <a class="ui card" href="/bravehouse" target="_blank">
+                            <div class="image">
+                                <img src="/assets/v1/images/v-636578695575205703_banner-list-company-bravehouse.png">
+                            </div>
+                            <div class="content">
+                                <div class="header">Brave House</div>
+                                <div class="meta">
+                                    <span class="category">Mais que uma simples atividade física, realizamos treinamento de alto rendimento para qualquer tipo de pessoa.</span>
+                                </div>
+                                <div class="description">
+                                    <p>a partir de</p>
+                                    <p><span class="price">R$ 155,00</span> / por mês</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="column">
+                        <a class="ui card" href="/banhoterapiabox" target="_blank">
+                            <div class="image">
+                                <img src="/assets/v1/images/v-636253563633685380_banner-list-company-banhoterapia.png">
+                            </div>
+                            <div class="content">
+                                <div class="header">Banho Terapia Box</div>
+                                <div class="meta">
+                                    <span class="category">Produtos artesanais terapêuticos diretos na sua porta, todo mês. Um Box de banho, beleza e aromas.</span>
+                                </div>
+                                <div class="description">
+                                    <p>a partir de</p>
+                                    <p><span class="price">R$ 59,00</span> / por mês</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
